# FastM1

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  windows.toolchain.cmake
.github/workflows/: codeql-analysis.yml
include/: mfclassic.h
src/: fastm1.c  mfclassic.c  nfc-utils.c  test_libnfc.c
